--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<p>about works! {{counter}}</p>
+
+<app-area [count]=counter></app-area>
+
+<br /><br />
+
+<button (click)=countIt()>click count ++ {{counter}}</button>
