--- a/src/app/area/area.component.html
+++ b/src/app/area/area.component.html
@@ -5,6 +5,8 @@
     current count is {{ count }}
 
     <br><br><br>
+    <button (click)=showAreaName()>showAreaName</button>
+    <br>
     <hr>
     <button (click)=countTheArea()>area click {{myAreaSum}}</button>
 
