--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,8 +3,10 @@
 <app-area
     [count]=counter
     (areaNameEmit)=areaEmitHandler($event)
-    (count1)=count1ChangedHandler($event)>
+    (countOfArea)=countOfAreaHandler($event)>
 </app-area>
+
+<p>{{countOfAreaNumber}}</p>
 
 <br /><br />
 
